--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start": "node index.js",
     "watch": "nodemon index.js",
-    "seed": "node seed/seed.js",
+    "seed-artist": "node seed/seedArtists.js",
+    "seed-artwork": "node seed/seedArtwork.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
