--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "watch": "nodemon index.js",
     "seed-artist": "node seed/seedArtists.js",
     "seed-artwork": "node seed/seedArtwork.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sentry/node": "^7.26.0",
+    "@sentry/tracing": "^7.26.0",
     "apollo-server-express": "^3.11.1",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
@@ -25,5 +27,8 @@
     "pg": "^8.8.0",
     "postgresql": "^0.0.1",
     "sqlite3": "^5.1.2"
+  },
+  "devDependencies": {
+    "jest": "^29.3.1"
   }
 }
